# utsma-sim-2

./: .dockerignore  README.md  UTILS.md  compose.yaml  run_image.ps1  run_sim.sh
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.ros-from-jammy-pfms.amd64  Dockerfile.ros-humble-pfms.amd64  Dockerfile.ros2-amd64
eufs_msgs/msg/: CanState.msg
eufs_plugins/: CMakeLists.txt  package.xml
eufs_plugins/gazebo_cone_ground_truth/: CMakeLists.txt
eufs_plugins/gazebo_cone_ground_truth/include/gazebo_cone_ground_truth/: gazebo_cone_ground_truth.hpp
eufs_plugins/gazebo_cone_ground_truth/src/: gazebo_cone_ground_truth.cpp
eufs_plugins/gazebo_race_car_model/include/gazebo_race_car_model/: gazebo_ros_race_car.hpp
eufs_plugins/gazebo_race_car_model/src/: state_machine.cpp
eufs_racecar/launch/: load_car.launch.py
eufs_rqt/src/eufs_rqt/: EUFSRobotSteeringGUI.py  MissionControlGUI.py
eufs_tracks/launch/: small_track.launch
path_planning_v2/: CMakeLists.txt  README.md  package.xml
path_planning_v2/src/: path_planner.cpp  utils.cpp
utsma_msgs/: CMakeLists.txt  package.xml
utsma_msgs/action/: ComputeLocalOptimalPath.action  FollowLocalPath.action
utsma_msgs/msg/: ConeArrayWithCovariance.msg  StateMachineState.msg  VehicleCommand.msg  VehicleCommandStamped.msg  VehicleState.msg
utsma_msgs/srv/: SendPacket.srv
wiki/: EUFS_MAINPAGE.md
